# outline-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-coveralls.yml  python-publish.yml  python-tests.yml
outline_sdk/: __init__.py  client.py  service.py  struct.py
