[tool.poetry]
name = "outline-sdk"
version = "0.2.0"
description = "Async Python SDK wrapper for Outline Manager VPN"
authors = ["Denis Malin <denis@malina.page>"]
license = "MIT License"
readme = "README.md"

homepage = "https://github.com/skar404/outline-sdk"
repository = "https://github.com/skar404/outline-sdk"
documentation = "https://github.com/skar404/outline-sdk"

packages = [
    { include = "outline_sdk" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
uvloop = "^0.17.0"
pyrogram = "^2.0.106"
aio-clients = "^2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
mypy = "^1.4.1"
coverage = "^7.2.7"
pytest-asyncio = "^0.21.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[mypy]
ignore_missing_imports = true
